* libtool.m4 (_AC_PROG_LIBTOOL): Run before AC_LIBTOOL_GCJ. Add ltcf-c.sh to LIBTOOL_DEPS.  Run AC_LIBTOOL_CXX and AC_LIBTOOL_GCJ on demand. (AC_PROVIDE_IFELSE): Define for non-CVS autoconf compatibility. (AC_LIBTOOL_CXX): Accept multiple executions.  Add ltcf-cxx.sh to LIBTOOL_DEPS.  Reset config.log output. (AC_LIBTOOL_GCJ): New macro. * libtoolize.in: Copy ltcf-cxx.sh if AC_PROG_CXX is found. Copy ltcf-gcj.sh when appropriate. * doc/libtool.texi (AC_LIBTOOL_CXX): Doesn't have to be explicitly called. (AC_LIBTOOL_GCJ): Document. * tagdemo/configure.in (AC_LIBTOOL_CXX): Don't call.

--- a/libtoolize.in
+++ b/libtoolize.in
@@ -148,11 +148,15 @@ if test -z "$files"; then
 fi
 files='config.guess config.sub ltconfig ltmain.sh ltcf-c.sh'
 
-#Add C++ support if configure.in uses AC_LIBTOOL_CXX.
-if egrep '^[ ]*AC_LIBTOOL_CXX' configure.in > /dev/null 2>&1; then
+#Add C++ support if configure.in uses AC_LIBTOOL_CXX or AC_PROG_CXX.
+if egrep '^[ ]*AC_(PROG|LIBTOOL)_CXX' configure.in > /dev/null 2>&1; then
   files="$files ltcf-cxx.sh"
 fi
 
+#Add GCJ support if configure.in uses AC_LIBTOOL_GCJ or A[CM]_PROG_GCJ.
+if egrep '^[ ]*A([CM]_PROG|C_LIBTOOL)_GCJ' configure.in > /dev/null 2>&1; then
+  files="$files ltcf-gcj.sh"
+fi
 
 auxdir=.
 auxdirline=`egrep '^AC_CONFIG_AUX_DIR' configure.in 2>/dev/null`
