--- a/configure.in
+++ b/configure.in
@@ -58,6 +58,11 @@ AC_PROG_CXX
 popdef([AC_MSG_ERROR])
 AM_CONDITIONAL(HAVE_CXX, [test "x$CXX" != xno])
 
+pushdef([AC_MSG_ERROR], [GCJ=no])
+AM_PROG_GCJ
+popdef([AC_MSG_ERROR])
+AM_CONDITIONAL(HAVE_GCJ, [test "x$GCJ" != xno])
+
 AC_ARG_ENABLE(ltdl-install,
 [  --disable-ltdl-install  do not install libltdl])
 if test x"${enable_ltdl_install+set}" != xset; then
