* ltmain.in: Make sure $arg is set when linking `.lo' files into a program.  Moved tag decision code after check for recognized source file extension (fixes "suffix" test failure).  Merged Rhapsody support from main trunk. (output_obj) Added missing '$' before "echo" command (fixes "sh" test failure). * tests/suffix.test: Corrected typo in error message, and improved the message.

--- a/configure.in
+++ b/configure.in
@@ -59,7 +59,7 @@ popdef([AC_MSG_ERROR])
 AM_CONDITIONAL(HAVE_CXX, [test "x$CXX" != xno])
 
 pushdef([AC_MSG_ERROR], [GCJ=no])
-AM_PROG_GCJ
+#AM_PROG_GCJ
 popdef([AC_MSG_ERROR])
 AM_CONDITIONAL(HAVE_GCJ, [test "x$GCJ" != xno])
 
