--- a/configure.in
+++ b/configure.in
@@ -39,7 +39,7 @@ AM_PROG_NM
 AC_SUBST(NM)
 AC_PROG_LN_S
 
-dnl For the `lineno' script (which puts line numbers into `ltconfig').
+# For the `lineno' script (which puts line numbers into `ltconfig').
 AC_PROG_AWK
 
 dnl Check for dlopen support
@@ -59,7 +59,17 @@ popdef([AC_MSG_ERROR])
 AM_CONDITIONAL(HAVE_CXX, [test "x$CXX" != xno])
 
 pushdef([AC_MSG_ERROR], [GCJ=no])
-#AM_PROG_GCJ
+ifdef([AC_PROG_GCJ],[AC_PROG_GCJ],
+  [ifdef([AM_PROG_GCJ],[],[
+    # Stolen from automake
+    AC_DEFUN([AM_PROG_GCJ],[
+      AC_CHECK_PROGS(GCJ, gcj, gcj)
+      if test "x${GCJFLAGS+set}" = xset; then
+        GCJFLAGS="-g -O2"
+      fi
+      AC_SUBST(GCJFLAGS)
+    ])])
+  AM_PROG_GCJ])
 popdef([AC_MSG_ERROR])
 AM_CONDITIONAL(HAVE_GCJ, [test "x$GCJ" != xno])
 
