* ltconfig.in: Check if -lc is necessary for building shared libary. Set build_libtool_need_lc to indicate it. * ltmain.in: Add -lc when building shared libary only if necessary.

--- a/ltmain.in
+++ b/ltmain.in
@@ -2384,8 +2384,10 @@ compiler."
 	    # these systems don't actually have a c library (as such)!
 	    ;;
 	  *)
-	    # Add libc to deplibs on all other systems.
-	    deplibs="$deplibs -lc"
+ 	    # Add libc to deplibs on all other systems if necessary.
+ 	    if test $build_libtool_need_lc = "yes"; then
+ 	      deplibs="$deplibs -lc"
+ 	    fi
 	    ;;
 	  esac
 	fi
