* ltcf-c.sh, ltcf-cxx.sh: Check if -lc is necessary for building shared library. * ltcf-gcj.sh: Assume -lc is implicitly linked in. * ltconfig.in: Set build_libtool_need_lc to indicate it. * ltmain.in: Add -lc when building shared libary only if necessary.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -2061,6 +2061,9 @@ SHELL=$LTSHELL
 # Whether or not to build shared libraries.
 build_libtool_libs=$enable_shared
 
+# Whether or not to add -lc for building shared libraries.
+build_libtool_need_lc=$need_lc
+
 # Whether or not to build static libraries.
 build_old_libs=$enable_static
 
