--- a/ltmain.in
+++ b/ltmain.in
@@ -2048,7 +2048,7 @@ EOF
 	      test -n "$add" && finalize_deplibs="$add $finalize_deplibs"
 	    else
 	      test -n "$add_dir" && deplibs="$add_dir $deplibs"
-	      test -n "$add" && deplibs="$add deplibs"
+	      test -n "$add" && deplibs="$add $deplibs"
 	    fi
 	  fi
 	elif test $linkmode = prog; then
