* ltmain.in (shtool): Use echo|grep instead of expr, as in the original patch.

--- a/ltmain.in
+++ b/ltmain.in
@@ -3828,7 +3828,7 @@ relink_command=\"$relink_command\""
     # install_prog (especially on Windows NT).
     if test "$nonopt" = "$SHELL" || test "$nonopt" = /bin/sh ||
        # Allow the use of GNU shtool's install command.
-       expr "X$nonopt" : "X.*shtool.*" > /dev/null; then
+       $echo "X$nonopt" | $Xsed | grep shtool > /dev/null; then
       # Aesthetically quote it.
       arg=`$echo "X$nonopt" | $Xsed -e "$sed_quote_subst"`
       case "$arg" in
